--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <img src="static/skype.png" alt="">
         <h4 style="color: white;">Добро пожаловать в Skype Reborn!</h4>
         <p style="color: white;">Мы гордимся тем, что представляем возрожденный Skype, который был закрыт! <br>
-            Теперь вы можете наслаждаться всеми функциями вашего любимого мессенджера совершенно бесплатно и без рекламы.<br> Присоединяйтесь к нам и общайтесь с друзьями и близкими без ограничений!</p>
+            Теперь вы можете наслаждаться всеми функциями вашего любимого<br>  мессенджера совершенно бесплатно и без рекламы. <br> Присоединяйтесь к нам и общайтесь с друзьями и близкими без ограничений!</p>
     </div>
 </body>
 </html>
