--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="skype">
         <center><h1 style="color: white;">Скачайте Skype Reborn</h1></center>
         <div class="gombok">
-            <a href="https://dkon.app/dev/last_version/dm.apk" class="button">Скачать для Android</a>
+            <a href="https://arsip.dkon.app/other_client/skype_reborn.apk" class="button">Скачать для Android</a>
             <a href="https://dkon.app/dev/last_version/dkon.dmg" class="button">Скачать для MacOS</a>
             <a href="https://dkon.app/dev/last_version/dkon.exe" class="button">Скачать для Windows</a>
             <a href="https://dkon.app/dev/last_version/dkon.appimage" class="button">Скачать для Linux</a>
